--- a/enditMySet.html
+++ b/enditMySet.html
@@ -11,6 +11,27 @@
     <script src="js/axios.min.js"></script>
 </head>
 <body>
+<div id="app">
+    <div>
+        已选择:{{arrivaldate}}的{{number}}号座位
+    </div>
+    <div>
+        <div>到店时间</div>
+        <div>{{time}}</div>
+    </div>
+    <div>
+        <div>姓名</div>
+        <div>{{name}}</div>
+    </div>
+    <div>
+        <div>手机号</div>
+        <div>{{phone}}</div>
+    </div>
+    <div>
+        <div>来客人数</div>
+        <div>{{num}}</div>
+    </div>
+</div>
 <script src="js/enditMySet.js"></script>
 </body>
 </html>
