--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
-    <title>吧台座位预定</title>
+    <title>吧台座位预订</title>
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/barSet.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -50,6 +50,7 @@
         </div>
     </div>
 </div>
+<script src="js/common.js"></script>
 <script src="js/barSet.js"></script>
 </body>
 </html>
