--- a/enditMySet.html
+++ b/enditMySet.html
@@ -21,7 +21,7 @@
         <div class="iputBox">
             <div class="inputTitle">到店时间</div>
             <div class="inputContent">
-                <input type="text" v-model="arrivaltime" placeholder="请选择到店时间">
+                <input type="text" v-model="arrivaltime" placeholder="请选择到店时间" disabled="disabled">
             </div>
         </div>
         <div  class="iputBox">
