--- a/mySet.html
+++ b/mySet.html
@@ -72,7 +72,7 @@
     <!--提示框-->
     <div class="modelBg" v-show="showModel">
         <div class="modelBox">
-            <div class="modelTitle">即将取消<br><span>{{deleteMsg}}</span><br>预定桌？</div>
+            <div class="modelTitle">即将取消<br><span>{{deleteMsg}}</span><br>预定？</div>
             <div class="modelBtnBox">
                 <div class="cancelBtn" @click="noDel">取消</div>
                 <div class="sureBtn" @click="cancelOrder">确定</div>
