--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </div>
 </div>
 <script src="js/common.js"></script>
+<script src="js/checkOpenId.js"></script>
 <script src="js/barSet.js"></script>
 </body>
 </html>
