--- a/enditMySet.html
+++ b/enditMySet.html
@@ -12,7 +12,7 @@
     <script src="js/axios.min.js"></script>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div class="pickedMsg">
         <span>已选择:</span>
         <span><span class="yellowWord">{{arrivaldate}}</span>的<span class="yellowWord">{{number}}</span>号座位</span>
