--- a/mySet.html
+++ b/mySet.html
@@ -12,7 +12,7 @@
     <script src="js/axios.min.js"></script>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div class="myorder">我的预定:</div>
     <div class="orderArrBox">
         <div class="orderBox" v-for="item in myOrderList">
