--- a/mySet.html
+++ b/mySet.html
@@ -81,6 +81,7 @@
     </div>
 </div>
 <script src="js/common.js"></script>
+<script src="js/checkOpenId.js"></script>
 <script src="js/mySet.js"></script>
 </body>
 </html>
