--- a/mySet.html
+++ b/mySet.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="app" v-cloak>
-    <div class="myorder">我的预定:</div>
+    <div class="myorder">我的预订:</div>
     <div class="orderArrBox">
         <div class="orderBox" v-if="myOrderList.length!=0" v-for="item in myOrderList">
             <div>
