列表参数加openid

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 </div>
 <script src="js/common.js"></script>
 <script src="js/checkOpenId.js"></script>
-<script src="js/barSet.js"></script>
+<script src="js/barSet.js?ver=1"></script>
 </body>
 </html>
