--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 <script src="js/common.js"></script>
-<script src="js/checkOpenId.js"></script>
-<script src="js/barSet.js?ver=1"></script>
+<script src="js/checkOpenId.js?ver=1.1"></script>
+<script src="js/barSet.js?ver=1.2"></script>
 </body>
 </html>
