列表参数加openid

--- a/enditMySet.html
+++ b/enditMySet.html
@@ -80,7 +80,7 @@
         </div>
     </div>
 </div>
-<script src="js/common.js"></script>
-<script src="js/enditMySet.js"></script>
+<script src="js/common.js?ver=1.6"></script>
+<script src="js/enditMySet.js?ver=1.6"></script>
 </body>
 </html>
