--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
     </div>
 </div>
-<script src="js/common.js"></script>
-<script src="js/checkOpenId.js?ver=1.1"></script>
-<script src="js/barSet.js?ver=1.2"></script>
+<script src="js/common.js?ver=1.6"></script>
+<script src="js/checkOpenId.js?ver=1.6"></script>
+<script src="js/barSet.js?ver=1.6"></script>
 </body>
 </html>
