--- a/mySet.html
+++ b/mySet.html
@@ -81,8 +81,8 @@
         </div>
     </div>
 </div>
-<script src="js/common.js"></script>
-<script src="js/checkOpenId.js"></script>
-<script src="js/mySet.js"></script>
+<script src="js/common.js?ver=1.6"></script>
+<script src="js/checkOpenId.js?ver=1.6"></script>
+<script src="js/mySet.js?ver=1.6"></script>
 </body>
 </html>
