--- a/enditMySet.html
+++ b/enditMySet.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
     <title>提交预订信息</title>
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/enditMySet.css" rel="stylesheet" type="text/css">
@@ -80,7 +84,7 @@
         </div>
     </div>
 </div>
-<script src="js/common.js?ver=1.6"></script>
-<script src="js/enditMySet.js?ver=1.6"></script>
+<script src="js/common.js?ver=1.7"></script>
+<script src="js/enditMySet.js?ver=1.7"></script>
 </body>
 </html>
