--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
     <title>吧台座位预订</title>
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/barSet.css" rel="stylesheet" type="text/css">
