--- a/mySet.html
+++ b/mySet.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
     <title>我的预订</title>
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/mySet.css" rel="stylesheet" type="text/css">
